修改了映射表的边界条件，filebench运行不再出现bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "string": "c",
-        "string_view": "c"
-    }
+        "string_view": "c",
+        "*.tcc": "cpp"
+    },
+    "cmake.configureOnOpen": false
 }
